(possibly) corrected seeker's visible position

--- a/styles/sass/_parts/mainBox/_seekbar.sass
+++ b/styles/sass/_parts/mainBox/_seekbar.sass
@@ -62,6 +62,8 @@
 	width: 11px
 	height: 15px
 
+	left: -6px
+
 	// left: 500px
 	top: -5px
 
